# cruzalex-linux-config

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install.sh
config/: starship.toml
config/btop/: btop.conf
config/btop/themes/: cruzalex.theme
config/ghostty/: config  theme
config/hypr/: autostart.conf  bindings.conf  hyprland.conf  input.conf  rules.conf  theme.conf  webapps.conf
config/kitty/: kitty.conf  theme.conf
config/mako/: config
config/nvim/: init.lua  lazy-lock.json
config/nvim/lua/config/: autocmds.lua  keymaps.lua  options.lua
config/nvim/lua/cruzalex/: theme.lua
config/nvim/lua/plugins/: colorscheme.lua  cruzalex-theme.lua  editor.lua  ui.lua
config/spotify-player/: app.toml  theme.toml
config/tmux/: tmux.conf
config/walker/: config.toml  style.css
config/waybar/: colors.css  config.jsonc  style.css
config/yazi/: keymap.toml  theme.toml  yazi.toml
cruzalex/: .current-wallpaper  .favorites
cruzalex/hooks/theme-set.d/: 10-terminals.sh  20-hyprland.sh  20-waybar.sh  25-starship.sh  30-btop.sh  30-mako.sh  40-neovim.sh  50-ncspot.sh  50-spotify.sh  50-tmux.sh  50-yazi.sh  60-wallpaper.sh
cruzalex/themes/cobalt2/: colors.toml
docs/: KEYBINDINGS.md
home/: .zshrc
scripts/: detect-distro.sh  install-cargo-apps.sh  install-packages.sh  setup-configs.sh
tools/cruzalex-themes/: Cargo.toml
tools/cruzalex-themes/src/: app.rs  main.rs  theme.rs  ui.rs
